tests/expectations/compiler/async_blocks/future_in_tuple_check_fail.out
Error [ETYC0372104]: Not all futures were consumed: result2
    --> compiler-test:9:27
     |
   9 |         return (result.0, final { result.1.run(); });
     |                           ^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Make sure all futures are consumed exactly once. Consume by passing to an async function call or async block.
